--- a/02.class id selectors/index.html
+++ b/02.class id selectors/index.html
@@ -5,7 +5,9 @@
         <title>Exercise02</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p class="class1">Number 3 - I'm a class, but cooler!</p>
+    <p class="class3 number1">Number 1 - I'm a class!</p>
+    <div id="number2">Number 2 - I'm one ID.</div>
+    <p class="class3 number3">Number 3 - I'm a class, but cooler!</p>
+    <div id="number4">Number 4 - I'm another ID</div>
+    <p class="class3 number5">Number 5 - I'm a class!</p>
 </html>
